--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 PETE AND JEREMY'S DNDTIME
 
 </div>
-<p style="text-align: center; font-size: 10px">Pete & Jeremy's DnDTime Theme Song<br>
+<p style="text-align: center; font-size: 10px">Pete and Jeremy's DnDTime Theme Song<br>
 <audio id="audioplayer" controls>
 <source src="https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/15aa33f2/Music/Pete%20and%20Jeremy's%20DnDTime%20Theme%20Song.mp3" type="audio/mp3">
 </audio>
