--- a/index.html
+++ b/index.html
@@ -141,14 +141,14 @@
   <div id="menu" class="menu">
     <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a>
     <ul class="menu-items">
-      <li><a href="" onclick="show_div_element('welcome'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Home</a></li>
-      <li><a href="" onclick="show_div_element('queue'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Player Queue</a></li>
-      <li><a href="" onclick="show_div_element('shop'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('welcome'); hide_div_element('faq');">Bartholomew's Shop</a></li>
-      <li><a href="" onclick="show_div_element('about'); hide_div_element('welcome'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">About the Stream</a></li>
-      <li><a href="" onclick="show_div_element('playing'); hide_div_element('about'); hide_div_element('welcome'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Playing in DnDTime</a></li>
-      <li><a href="" onclick="show_div_element('roster'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('welcome'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Hero Roster</a></li>
-      <li><a href="" onclick="show_div_element('items'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('welcome'); hide_div_element('shop'); hide_div_element('faq');">Item Codex</a></li>
-      <li><a href="" onclick="show_div_element('faq'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">FAQ</a></li>
+      <li><a href="#" onclick="show_div_element('welcome'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Home</a></li>
+      <li><a href="#" onclick="show_div_element('queue'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Player Queue</a></li>
+      <li><a href="#" onclick="show_div_element('shop'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('welcome'); hide_div_element('faq');">Bartholomew's Shop</a></li>
+      <li><a href="#" onclick="show_div_element('about'); hide_div_element('welcome'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">About the Stream</a></li>
+      <li><a href="#" onclick="show_div_element('playing'); hide_div_element('about'); hide_div_element('welcome'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Playing in DnDTime</a></li>
+      <li><a href="#" onclick="show_div_element('roster'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('welcome'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Hero Roster</a></li>
+      <li><a href="#" onclick="show_div_element('items'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('welcome'); hide_div_element('shop'); hide_div_element('faq');">Item Codex</a></li>
+      <li><a href="#" onclick="show_div_element('faq'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">FAQ</a></li>
     </ul>
   </div>
 </nav>
