--- a/index.html
+++ b/index.html
@@ -6,12 +6,9 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="icon" type="image/png" href="https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/504534bf/Graphics/favicon.png">
-<link rel="stylesheet" href="assets/base.css">
-<link rel="stylesheet" href="fixed-navigation-bar.css">
-	
+
 <!-- Fonts created by /u/Solbera on Reddit -->
 <style type = "text/css">
-
 	@font-face {
 	font-family: "NodestoCaps";
 	src: url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff2") format("woff2"), url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff") format("woff");
@@ -31,7 +28,6 @@
 	font-family: "ZatannaMisdirection";
 	src: url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/Zatanna%20Misdirection.woff2") format("woff2"), url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/Zatanna%20Misdirection.woff") format("woff");
 	}
-
 	@font-face {
 	font-family: "ScalySansCapsBold";
 	src: url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/a5a8c065/Fonts/Scaly%20Sans%20Caps%20Bold.woff2") format("woff2"), url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/a5a8c065/Fonts/Scaly%20Sans%20Caps%20Bold.woff") format("woff");
@@ -74,7 +70,6 @@
 	text-align: left;
 	color: #58180d;
 	}
-
 	.BodyFont {
 	font-family:BookInsanity;
 	font-weight:normal;
@@ -137,21 +132,36 @@
 <!-- https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/924df10e/Graphics/Background-Alt.jpg -->
 
 <!-- Navbar -->
-<nav class="fixed-nav-bar">
-  <div id="menu" class="menu">
-    <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a>
-    <ul class="menu-items">
-      <li><a href="#" onclick="show_div_element('welcome'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Home</a></li>
-      <li><a href="#" onclick="show_div_element('queue'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Player Queue</a></li>
-      <li><a href="#" onclick="show_div_element('shop'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('welcome'); hide_div_element('faq');">Bartholomew's Shop</a></li>
-      <li><a href="#" onclick="show_div_element('about'); hide_div_element('welcome'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">About the Stream</a></li>
-      <li><a href="#" onclick="show_div_element('playing'); hide_div_element('about'); hide_div_element('welcome'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Playing in DnDTime</a></li>
-      <li><a href="#" onclick="show_div_element('roster'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('welcome'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Hero Roster</a></li>
-      <li><a href="#" onclick="show_div_element('items'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('welcome'); hide_div_element('shop'); hide_div_element('faq');">Item Codex</a></li>
-      <li><a href="#" onclick="show_div_element('faq'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">FAQ</a></li>
-    </ul>
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-card">
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('welcome'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Welcome</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('queue'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Player Queue</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('shop'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('welcome'); hide_div_element('faq');">Bartholomew's Shop</a>
+	<div class="w3-dropdown-hover w3-hide-small">
+      		<button class="w3-padding-large w3-button" title="More">More <i class="fa fa-caret-down"></i></button>     
+      		<div class="w3-dropdown-content w3-bar-block w3-card-4">
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('about'); hide_div_element('welcome'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">About the Stream</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('playing'); hide_div_element('about'); hide_div_element('welcome'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Playing in DnDTime</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('roster'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('welcome'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Hero Roster</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('items'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('welcome'); hide_div_element('shop'); hide_div_element('faq');">Item Codex</a>
+			<a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('faq'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">FAQ</a>
+      </div>
+    </div>
   </div>
-</nav>
+</div>
+
+<!-- Navbar on small screens -->
+<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('welcome'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Welcome</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('queue'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Player Queue</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('shop'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('welcome'); hide_div_element('faq');">Bartholomew's Shop</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('about'); hide_div_element('welcome'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">About the Stream</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('playing'); hide_div_element('about'); hide_div_element('welcome'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Playing in DnDTime</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('roster'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('welcome'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Hero Roster</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('items'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('welcome'); hide_div_element('shop'); hide_div_element('faq');">Item Codex</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('faq'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('welcome');">FAQ</a>
+</div>
 
 <!-- Title Area & Audio Player -->
 <br><br>
@@ -848,7 +858,22 @@ See the "Playing in DnDTime" page of this website.
 </footer>
 
 <script>
-	
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+        x.className += " w3-show";
+    } else { 
+        x.className = x.className.replace(" w3-show", "");
+    }
+}
+// When the user clicks anywhere outside of the modal, close it
+var modal = document.getElementById('ticketModal');
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
 // Show div pages elements
     function show_div_element(id) {
        var x = document.getElementById(id);
@@ -860,7 +885,7 @@ See the "Playing in DnDTime" page of this website.
        var x = document.getElementById(id);
           x.style.display = 'none';
     }
-
+	
 </script>
 
 </div>
