--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Pete and Jeremy's DnDTime</title>
+<title>Pete & Jeremy's DnDTime</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -134,7 +134,7 @@
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="show_div_element('welcome'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Welcome</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('queue'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('welcome'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">Player Queue</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large w3-hide-small" onclick="show_div_element('shop'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('welcome'); hide_div_element('faq');">Bartholomew's Shop</a>
@@ -170,7 +170,7 @@
 PETE AND JEREMY'S DNDTIME
 
 </div>
-<p style="text-align: center; font-size: 10px">Pete and Jeremy's DnDTime Theme Song<br>
+<p style="text-align: center; font-size: 10px">Pete & Jeremy's DnDTime Theme Song<br>
 <audio id="audioplayer" controls>
 <source src="https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/15aa33f2/Music/Pete%20and%20Jeremy's%20DnDTime%20Theme%20Song.mp3" type="audio/mp3">
 </audio>
