--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Pete & Jeremy's DnDTime</title>
+<title>Pete and Jeremy's DnDTime</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -853,8 +853,11 @@ See the "Playing in DnDTime" page of this website.
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+	<i class="fa fa-twitch w3-hover-opacity" aria-hidden="true"></i>
+	<i class="fa fa-youtube-play w3-hover-opacity" aria-hidden="true"></i>
+	<i class="fa fa-twitter w3-hover-opacity"></i>
+	<i class="fa fa-music w3-hover-opacity" aria-hidden="true"></i>
+	<i class="fa fa-podcast w3-hover-opacity" aria-hidden="true"></i>
 </footer>
 
 <script>
