--- a/index.html
+++ b/index.html
@@ -125,11 +125,8 @@
 	
 </style>
 
-<body background="https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/64ffa5d2/Graphics/Background.jpg" onload="show_div_element('welcome'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">
+<body background="/Graphics/Background.jpg" onload="show_div_element('welcome'); hide_div_element('about'); hide_div_element('playing'); hide_div_element('queue'); hide_div_element('roster'); hide_div_element('items'); hide_div_element('shop'); hide_div_element('faq');">
 <div style="position:center; overflow-x: hidden; height:100%;">
-
-<!-- https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/64ffa5d2/Graphics/Background.jpg -->
-<!-- https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/924df10e/Graphics/Background-Alt.jpg -->
 
 <!-- Navbar -->
 <div class="w3-top">
@@ -172,7 +169,7 @@ PETE AND JEREMY'S DNDTIME
 </div>
 <p style="text-align: center; font-size: 10px">Pete & Jeremy's DnDTime Theme Song<br>
 <audio id="audioplayer" controls>
-<source src="https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/15aa33f2/Music/Pete%20and%20Jeremy's%20DnDTime%20Theme%20Song.mp3" type="audio/mp3">
+<source src="/Music/Pete and Jeremy's DnDTime Theme Song.mp3" type="audio/mp3">
 </audio>
 </p>
 <br><br>
@@ -192,6 +189,13 @@ Welcome to Pete and Jeremy's DnDTime
 We are a Dungeons and Dragons live stream starring you, the viewer!  We air every Friday at 9:00 PM EST on Twitch.TV.  Check out our community Discord server, Twitch.TV channel, Roll20 LFG posting, and social media links below.  We use Discord as our primary means of communication, so check out the #announcements text channel for updates!
 
 </div>
+<br><hr><br>
+	
+<img src="/Graphics/Discord.png" alt="Join on Discord">
+<img src="/Graphics/TwitchTV.png" alt="Follow on Twitch.TV">
+<img src="/Graphics/Roll20.png" alt="Join on Roll20">
+<img src="/Graphics/Twitter.png" alt="Follow on Twitter">
+	
 <br><hr><br>
 <div class="HeadFont">
 
@@ -853,11 +857,9 @@ See the "Playing in DnDTime" page of this website.
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-	<i class="fa fa-twitch w3-hover-opacity" aria-hidden="true"></i>
-	<i class="fa fa-youtube-play w3-hover-opacity" aria-hidden="true"></i>
-	<i class="fa fa-twitter w3-hover-opacity"></i>
-	<i class="fa fa-music w3-hover-opacity" aria-hidden="true"></i>
-	<i class="fa fa-podcast w3-hover-opacity" aria-hidden="true"></i>
+
+
+	
 </footer>
 
 <script>
