--- a/index.html
+++ b/index.html
@@ -5,42 +5,42 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" type="image/png" href="https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/504534bf/Graphics/favicon.png">
+<link rel="icon" type="image/png" href="/Graphics/favicon.png">
 
 <!-- Fonts created by /u/Solbera on Reddit -->
 <style type = "text/css">
 	@font-face {
 	font-family: "NodestoCaps";
-	src: url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff2") format("woff2"), url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff") format("woff");
+	src: url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff2") format("woff2"), url("/Fonts/Nodesto%20Caps%20Condensed%20Bold.woff") format("woff");
 	}
 	
 	@font-face {
 	font-family: "MrEavesSmallCaps";
-	src: url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/Mr%20Eaves%20Small%20Caps.woff2") format("woff2"), url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/Mr%20Eaves%20Small%20Caps.woff") format("woff");
+	src: url("/Fonts/Mr%20Eaves%20Small%20Caps.woff2") format("woff2"), url("/Fonts/Mr%20Eaves%20Small%20Caps.woff") format("woff");
 	}
 	
 	@font-face {
 	font-family: "BookInsanity";
-	src: url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/BookinsanityRemakeRegular.woff2") format("woff2"), url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/BookinsanityRemakeRegular.woff") format("woff");
+	src: url("/Fonts/BookinsanityRemakeRegular.woff2") format("woff2"), url("/Fonts/BookinsanityRemakeRegular.woff") format("woff");
 	}
 	
 	@font-face {
 	font-family: "ZatannaMisdirection";
-	src: url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/Zatanna%20Misdirection.woff2") format("woff2"), url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/6f48ded1/Fonts/Zatanna%20Misdirection.woff") format("woff");
+	src: url("/Fonts/Zatanna%20Misdirection.woff2") format("woff2"), url("/Fonts/Zatanna%20Misdirection.woff") format("woff");
 	}
 	@font-face {
 	font-family: "ScalySansCapsBold";
-	src: url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/a5a8c065/Fonts/Scaly%20Sans%20Caps%20Bold.woff2") format("woff2"), url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/a5a8c065/Fonts/Scaly%20Sans%20Caps%20Bold.woff") format("woff");
+	src: url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff2") format("woff2"), url("/Fonts/Scaly%20Sans%20Caps%20Bold.woff") format("woff");
 	}
 	
 	@font-face {
 	font-family: "ScalySansBold";
-	src: url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/a5a8c065/Fonts/Scaly%20Sans%20Bold.woff2") format("woff2"), url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/a5a8c065/Fonts/Scaly%20Sans%20Bold.woff") format("woff");
+	src: url("/Fonts/Scaly%20Sans%20Bold.woff2") format("woff2"), url("/Fonts/Scaly%20Sans%20Bold.woff") format("woff");
 	}
 	
 	@font-face {
 	font-family: "ScalySans";
-	src: url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/a5a8c065/Fonts/Scaly%20Sans.woff2") format("woff2"), url("https://cdn.rawgit.com/PJDnDTime/DnDTime-Website-Files/a5a8c065/Fonts/Scaly%20Sans.woff") format("woff");
+	src: url("/Fonts/Scaly%20Sans.woff2") format("woff2"), url("/Fonts/Scaly%20Sans.woff") format("woff");
 	}
 		
 	.TitleFont {
