--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@ We are a Dungeons and Dragons live stream starring you, the viewer!  We air ever
 </div>
 <br><hr><br>
 	
-<img src="/Graphics/Discord.png" alt="Join on Discord">
-<img src="/Graphics/TwitchTV.png" alt="Follow on Twitch.TV">
-<img src="/Graphics/Roll20.png" alt="Join on Roll20">
-<img src="/Graphics/Twitter.png" alt="Follow on Twitter">
+	<a href="https://discord.gg/u3sMTvJ"><img src="/Graphics/Discord.png" alt="Join on Discord"></a>
+	<a href="https://www.twitch.tv/dndtime"><img src="/Graphics/TwitchTV.png" alt="Follow on Twitch.TV"></a>
+	<a href="https://app.roll20.net/lfg/listing/77757/pete-and-jeremys-d-and-d-time"><img src="/Graphics/Roll20.png" alt="Join on Roll20"></a>
+	<a href="https://twitter.com/dnd_time"><img src="/Graphics/Twitter.png" alt="Follow on Twitter"></a>
 	
 <br><hr><br>
 <div class="HeadFont">
