--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="javascript:void(0)"><img src="/Graphics/DnDTime-Logo.png"></a>
+  <a class="navbar-brand" href="javascript:void(0)"></a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav">
