--- a/index.html
+++ b/index.html
@@ -407,6 +407,10 @@ The queue resets weekly, so remember to enter each week that you are interested 
 <br><br>
 
 Flagrant attempts to abuse our system will result in disqualification from participating in DnDTime.
+	
+<br><br>
+	
+If the form below does not load correctly for you, try this <a href="https://drive.google.com/open?id=1TOlMudQXcNlaqHsi9hnvsmXRfnaQ8ucUojsKYbKZhPg">direct link</a>.
 
 <br><br>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeVdDbxlzNBk-kxR_U6zQP0ytLGk8z9q71gbLvLcVEcwc9t2g/viewform?embedded=true" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
