--- a/index.html
+++ b/index.html
@@ -675,12 +675,10 @@ Items on Display this Month
   </tr>
   <tr>
     <th>
-		Alchemy Jug
+		Weapon of Warning
 	</th>
     <td>
-		This ceramic jug appears to be able to hold a gallon of liquid and weighs 12 pounds whether full or empty. Sloshing sounds can be heard from within the jug when it is shaken, even if the jug is empty.
-		<br>
-		You can use an action and name one liquid from the table below to cause the jug to produce the chosen liquid.
+		This magic weapon warns you of danger. While the weapon is on your person, you have advantage on initiative rolls. In addition, you and any of your companions within 30 feet of you can't be surprised, except when incapacitated by something other than nonmagical sleep. The weapon magically awakens you and your companions within range if any of you are sleeping naturally when combat begins.
 	</td>
 	<td>
 		600 Bartholomew Bucks
@@ -688,10 +686,26 @@ Items on Display this Month
   </tr>
   <tr>
     <th>
-		Hat of Disguise
+		Boots of the Winterlands
 	</th>
     <td>
-		While wearing this hat, you can use an action to cast the disguise self spell from it at will. The spell ends if the hat is removed.
+		These furred boots are snug and feel quite warm. While you wear them, you gain the following benefits:
+		<br>
+		• You have resistance to cold damage.
+		<br>
+		• You ignore difficult terrain created by ice or snow.
+		<br>
+		• You can tolerate extreme cold temperatures without any additional protection.	</td>
+	<td>
+		600 Bartholomew Bucks
+	</td>
+  </tr>
+  <tr>
+    <th>
+		Circlet of Blasting
+	</th>
+    <td>
+		While wearing this circlet, you can use an action to cast the Scorching Ray spell with it. When you make the spell's attacks, you do so with an attack bonus of +5. The circlet can't be used this way again until the next dawn.
 	</td>
 	<td>
 		600 Bartholomew Bucks
@@ -699,36 +713,10 @@ Items on Display this Month
   </tr>
   <tr>
     <th>
-		Mithral Armor
+		Boots of Levitation
 	</th>
     <td>
-		Mithral is a light, flexible metal. A mithral chain shirt or breastplate can be worn under normal clothes. If the armor normally imposes disadvantage on Dexterity (Stealth) checks or has a Strength requirement, the mithral version of the armor doesn't.
-		<br>
-		This is an armor upgrade which can be applied to any armor.
-	</td>
-	<td>
-		600 Bartholomew Bucks
-	</td>
-  </tr>
-  <tr>
-    <th>
-		Necklace of Fireballs
-	</th>
-    <td>
-		This necklace has 1d6 + 3 beads hanging from it. You can use an action to detach a bead and throw it up to 60 feet away. When it reaches the end of its trajectory, the bead detonates as a 3rd-level fireball spell (save DC 15).
-		<br>
-		You can hurl multiple beads, or even the whole necklace, as one action. When you do so, increase the level of the fireball by 1 for each bead beyond the first.
-	</td>
-	<td>
-		400 Bartholomew Bucks
-	</td>
-  </tr>
-  <tr>
-    <th>
-		Ring of Feather Falling
-	</th>
-    <td>
-		When you fall while wearing this ring, you descend 60 feet per round and take no damage from falling.
+		While you wear these boots, you can use an action to cast the levitate spell on yourself at will.
 	</td>
 	<td>
 		1,200 Bartholomew Bucks
@@ -736,18 +724,27 @@ Items on Display this Month
   </tr>
   <tr>
     <th>
-		Folding Boat
+		Quaal's Feather Token, Bird
 	</th>
     <td>
-		This object appears as a wooden box that measures 12 inches long, 6 inches wide, and 6 inches deep. It weighs 4 pounds and floats. It can be opened to store items inside. This item also has three command words, each requiring you to use an action to speak it.
+		This tiny object looks like a feather.
 		<br>
-		One command word causes the box to unfold into a boat 10 feet long, 4 feet wide, and 2 feet deep. The boat has one pair of oars, an anchor, a mast, and a lateen sail. The boat can hold up to four Medium creatures comfortably.
+		You can use an action to toss the token 5 feet into the air. The token disappears and an enormous, multicolored bird takes its place. The bird has the statistics of a roc, but it obeys your simple commands and can't attack. It can carry up to 500 pounds while flying at its maximum speed (16 miles an hour for a maximum of 144 miles per day. with a one-hour rest for every 3 hours of flying), or 1,000 pounds at half that speed. The bird disappears after flying its maximum distance for a day or if it drops to 0 hit points. You can dismiss the bird as an action.
+	</td>
+	<td>
+		400 Bartholomew Bucks
+	</td>
+  </tr>
+  <tr>
+    <th>
+		Sun Blade
+	</th>
+    <td>
+		This item appears to be a longsword hilt. While grasping the hilt, you can use a bonus action to cause a blade of pure radiance to spring into existence, or make the blade disappear. While the blade exists, this magic longsword has the finesse property. If you are proficient with shortswords or longswords, you are proficient with the sun blade.
 		<br>
-		The second command word causes the box to unfold into a ship 24 feet long, 8 feet wide; and 6 feet deep. The ship has a deck, rowing seats, five sets of oars, a steering oar, an anchor, a deck cabin, and a mast with a square sail. The ship can hold fifteen Medium creatures comfortably.
+		You gain a +2 bonus to attack and damage rolls made with this weapon, which deals radiant damage instead of slashing damage. When you hit an undead with it, that target takes an extra 1d8 radiant damage.
 		<br>
-		When the box becomes a vessel, its weight becomes that of a normal vessel its size, and anything that was stored in the box remains in the boat.
-		<br>
-		The third command word causes the folding boat to fold back into a box, provided that no creatures are aboard. Any objects in the vessel that can't fit inside the box remain outside the box as it folds. Any objects in the vessel that can fit inside the box do so.
+		The sword's luminous blade emits bright light in a 15-foot radius and dim light for an additional 15 feet. The light is sunlight. While the blade persists, you can use an action to expand or reduce its radius of bright and dim light by 5 feet each, to a maximum of 30 feet each or a minimum of 10 feet each."
 	</td>
 	<td>
 		1,200 Bartholomew Bucks
