--- a/index.html
+++ b/index.html
@@ -528,6 +528,10 @@ Generally speaking, if you roll a 1, something terrible will happen.  If you rol
 
 Interested in sharing your own creative spark with DnDTime?  Check out <a href="https://docs.google.com/document/d/1jjJiZmwj6CgrepNULUkRL9pmDrRS-ZIpFllTMww5w-g/edit?usp=sharing">Bartholomew's Guide to Enchanting</a> and then <a href="https://docs.google.com/forms/d/e/1FAIpQLScm1Q5HW0q0y-kl1jzJU0EUOyHv8JOne9F6hoHaSDCE02jfiQ/viewform">Submit Your Own Item</a> for the Big Bag Bonanza!  Not every item will make it in, but if an item you designed is pulled from the bag, you will be rewarded a 100 Bartholomew Bucks creators reward and credited on the stream for your creation.
 
+<br><br>
+	
+Not quite feeling the item you pulled from Bartholomew's Big Bag Bonanza? Post it for trade on the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeC80ARQ3Kg8YW1mNh1IzUcq9PnTh75Ga3cwuufmSfjgHyDdA/viewform?usp=sf_link">Pete & Jeremy's DnDTime Trading Post</a>.
+	
 </div>
 <br><hr><br>
 <div class="SubHeadFont">
