--- a/index.html
+++ b/index.html
@@ -439,6 +439,32 @@ This roster details every character to ever be played on Pete and Jeremy's DnDTi
 </div>
 <br><br>
 </div>
+<div id="trading" style="margin-right: 7%; margin-left: 7%;">
+
+<div class="HeadFont">
+
+Trading Post
+</div>
+<br><br>
+<div class="BodyFont">
+
+Got unlucky and don't like the item you've pulled from Bartholomew's Shop? Post it for sale or trade here! Use this trading post to see all items up for trade from other players. Once you've found an item you want, get in touch with the seller on Discord and then both of you can contact Pete or Jeremy with a confirmation of the trade.
+
+<br>
+
+You can also edit your post below. Due to limitations in our system, technically anyone can edit any entry. All trades must <b>still</b> be validated by Pete or Jeremy and any editing of a listing which is not your own will not be tolerated.
+
+<br><br>
+
+<!-- Place this tag where you want the Awesome Table Widget to render -->
+<div data-type="AwesomeTableView" data-viewID="-L4TIcFc95CYVuLccz9J"></div>
+
+<!-- Place this tag in your head or just before your close body tag. -->
+<script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
+
+</div>
+<br><br>
+</div>
 <div id="items" style="margin-right: 7%; margin-left: 7%;">
 
 <div class="HeadFont">
